--- a/index.html
+++ b/index.html
@@ -387,7 +387,13 @@
                 const response = await fetch(STORY_API_URL, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ contents: [{ parts: [{ text: userQuery }] }], systemInstruction: { parts: [{ text: systemPrompt }] } }) });
                 if (!response.ok) throw new Error(`API Error: ${response.status}`);
                 const result = await response.json();
-                let jsonText = result.candidates[0].content.parts[0].text.replace(/^```json\s*/, '').replace(/```$/, '');
+                let rawText = result.candidates[0].content.parts[0].text;
+                const startIndex = rawText.indexOf('{');
+                const endIndex = rawText.lastIndexOf('}');
+                if (startIndex === -1 || endIndex === -1) {
+                    throw new Error("Resposta da IA não contém um JSON válido.");
+                }
+                const jsonText = rawText.substring(startIndex, endIndex + 1);
                 const updateData = JSON.parse(jsonText);
                 
                 const roomRef = doc(collectionRef, currentRoomCode);
@@ -745,7 +751,13 @@
                 const response = await fetch(STORY_API_URL, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ contents: [{ parts: [{ text: userQuery }] }], systemInstruction: { parts: [{ text: systemPrompt }] } }) });
                 if (!response.ok) throw new Error('API Error');
                 const result = await response.json();
-                let jsonText = result.candidates[0].content.parts[0].text.replace(/^```json\s*/, '').replace(/```$/, '');
+                let rawText = result.candidates[0].content.parts[0].text;
+                const startIndex = rawText.indexOf('{');
+                const endIndex = rawText.lastIndexOf('}');
+                if (startIndex === -1 || endIndex === -1) {
+                    throw new Error("Resposta da IA não contém um JSON válido.");
+                }
+                const jsonText = rawText.substring(startIndex, endIndex + 1);
                 const data = JSON.parse(jsonText);
                 
                 const roomRef = doc(collectionRef, currentRoomCode);
