--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="background"></div>
 
     <div id="entry-container" class="w-full max-w-md container-screen rounded-lg shadow-2xl p-8 text-center">
-        <h1 class="text-5xl title-font text-yellow-200 mb-8">Crónicas da IA</h1>
+        <h1 class="text-5xl title-font text-yellow-200 mb-8">O Oráculo do Silício</h1>
         <div class="space-y-4">
             <button id="host-game-btn" class="w-full action-button title-font tracking-wider text-lg font-bold py-3 px-4 rounded-lg" disabled>Ser o Mestre (Criar Aventura)</button>
             <button id="join-room-btn" class="w-full secondary-button title-font tracking-wider text-lg font-bold py-3 px-4 rounded-lg" disabled>Juntar-se a uma Aventura</button>
@@ -1346,4 +1346,5 @@
     </script>
 </body>
 </html>
+
 
